--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 .task {
-  width: 294px; height: 40px;
+  width: 305px; height: 40px;
   border-bottom: 1px solid #DDD;
   box-sizing: border-box;
 }
@@ -81,10 +81,11 @@ body {
   float: left;
 }
 
-/* .task .complete {
-  display: inline;
+.task .complete {
+  height: 100%; width: 20px;
+  margin: 0;
   float: right;
-} */
+}
 
 .addtask {
   width: 308px; height: 46px;
