Include GAE app

--- a/hacksc-todolist/templates/index.html
+++ b/hacksc-todolist/templates/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>My ToDo</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/static/favicon.ico">
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
-    <img src="img/logo.png" alt="ToDo" class="logo">
+    <img src="/static/img/logo.png" alt="ToDo" class="logo">
     <div class="container">
       <section class="modify">
         <div class="addlist">
