--- a/hacksc-todolist/templates/index.html
+++ b/hacksc-todolist/templates/index.html
@@ -54,5 +54,7 @@
       </section>
     </div>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="/static/script.js"></script>
   </body>
 </html>
