--- a/hacksc-todolist/templates/index.html
+++ b/hacksc-todolist/templates/index.html
@@ -56,5 +56,10 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/public/script.js"></script>
+    <script>
+      $('.close').click(function() {
+        
+      });
+    </script>
   </body>
 </html>
