--- a/hacksc-todolist/public/style.css
+++ b/hacksc-todolist/public/style.css
@@ -47,6 +47,14 @@ input[type="text"] {
   font-size: 16px;
 }
 
+ul {
+  margin: 0; padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 /* Modify */
 /* ----------------------------------------------------- */
 .modify {
