--- a/hacksc-todolist/templates/index.html
+++ b/hacksc-todolist/templates/index.html
@@ -19,33 +19,8 @@
 
     <div class="container">
       <section class="todo">
-        <ul class="lists">
-          <li class="item list selected">
-            <div class="name">List 1</div>
-            <div class="close">&times;</div>
-          </li>
-          <li class="item list">
-            <div class="name">List 2</div>
-            <div class="close">&times;</div>
-          </li>
-          <li class="item list">
-            <div class="name">List 3</div>
-            <div class="close">&times;</div>
-          </li>
-        </ul>
+        <ul class="lists"></ul>
         <ul class="tasks">
-          <li class="item task">
-            <div class="name">This is a task.</div>
-            <input type="checkbox" class="complete">
-          </li>
-          <li class="item task">
-            <div class="name">This is another task.</div>
-            <input type="checkbox" class="complete">
-          </li>
-          <li class="item task">
-            <div class="name">This is yet another task.</div>
-            <input type="checkbox" class="complete">
-          </li>
           <section class="addtask">
             <input type="text">
             <button>Add Task</button>
